refactor(metadata): improve PDF metadata controller to support dynamic custom fields